# demo-with-axum

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/migrations/: 20220731065510_todo.sql
app/sql/: deleteUser.sql  getUser.sql  getUserTask.sql  insertTask.sql  insertUser.sql  logicalDeleteUser.sql  registUserEmail.sql
app/src/: main.rs
app/src/api/: delete_api.rs  get_api.rs  mod.rs  post_api.rs  put_api.rs
app/src/model/: mod.rs  task.rs  user.rs  user_task.rs
app/src/util/: db.rs
