[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.13"
chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
serde = { version = "1.0.140", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.20.1", features = ["full"] }
